--- a/kube/nodeapp.yaml
+++ b/kube/nodeapp.yaml
@@ -13,8 +13,7 @@ spec:
     spec:
       containers:
         - name:  nodeapp
-          image: mak1993/nodeapp01:${BUILD_NUMBER}
-          imagePullPolicy: Always
+          image: mak1993/nodeapp01:latest
           ports:
             - containerPort: 3000
           env:
